--- a/.github/workflows/arm-64-build.yml
+++ b/.github/workflows/arm-64-build.yml
@@ -1,4 +1,5 @@
 name: Raspberry Pi compile
+run-name: 打包 ARM 64 平台
 on:
   push:
 
@@ -41,4 +42,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Debian Bundle
-          path: ${{ github.workspace }}/target/release/bundle/deb/assets_manage_1.4_arm64.deb
+          path: ${{ github.workspace }}/target/release/bundle/deb/assets_manage_1.0_arm64.deb
